fix inputs zooming on mobile (#136)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,3 +146,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+input,
+textarea {
+  font-size: 16px;
+}
